--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rbxts/tool_pack",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "main": "out/init.lua",
   "scripts": {
     "build": "rbxtsc",
@@ -33,7 +33,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-roblox-ts": "^0.0.36",
     "prettier": "^3.3.2",
-    "roblox-ts": "^2.3.0",
+    "roblox-ts": "^2.3.0-dev-8137656",
     "typescript": "^5.4.5"
   },
   "dependencies": {
