changed eslint config

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,23 +5,19 @@
 		"useJSXTextNode": true,
 		"ecmaVersion": 2018,
 		"sourceType": "module",
-		"project": "./tsconfig.json"
+		"project": "./tsconfig.json",
 	},
-	"ignorePatterns": [
-		"/out"
-	],
-	"plugins": [
-		"@typescript-eslint",
-		"roblox-ts",
-		"prettier"
-	],
+	"ignorePatterns": ["/out"],
+	"plugins": ["@typescript-eslint", "roblox-ts"],
 	"extends": [
 		"eslint:recommended",
 		"plugin:@typescript-eslint/recommended",
 		"plugin:roblox-ts/recommended",
-		"plugin:prettier/recommended"
 	],
 	"rules": {
-		"prettier/prettier": "warn"
-	}
+		"no-inner-declarations": "off",
+		"no-constant-condition": "off",
+		"roblox-ts/lua-truthiness": "off",
+		"roblox-ts/no-any": "off",
+	},
 }
