--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"main": "out/init.lua",
 	"scripts": {
 		"build": "rbxtsc",
-		"watch": "rbxtsc -w",
+		"watch": "rbxtsc -w --verbose",
 		"prepublishOnly": "npm run build"
 	},
 	"repository": {
@@ -24,16 +24,16 @@
 		"access": "public"
 	},
 	"devDependencies": {
-		"@rbxts/compiler-types": "^2.3.0-types.1",
-		"@rbxts/types": "^1.0.805",
-		"@typescript-eslint/eslint-plugin": "^7.18.0",
-		"@typescript-eslint/parser": "^7.18.0",
-		"eslint": "^8.57.0",
+		"@rbxts/compiler-types": "^3.0.0-types.0",
+		"@rbxts/types": "^1.0.813",
+		"@typescript-eslint/eslint-plugin": "^8.12.2",
+		"@typescript-eslint/parser": "^8.12.2",
+		"eslint": "^9.14.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.2.1",
 		"eslint-plugin-roblox-ts": "^0.0.36",
 		"prettier": "^3.3.3",
-		"roblox-ts": "^2.3.0",
+		"roblox-ts": "^3.0.0-dev-371f97c",
 		"typescript": "^5.5.4"
 	},
 	"dependencies": {
